--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -254,17 +254,17 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
         
         <div class="fleet-slider">
             <div class="fleet-item">
-                <img src="/images/truck-1.jpg" alt="Truck / Cavalos Mecânicos" />
+                <img src="https://assets.volvo.com/is/image/VolvoInformationTechnologyAB/volvo-fh-diesel-cgi-exterior-1?qlt=82&wid=1024&ts=1724671378006&dpr=off&fit=constrain&fmt=png-alpha" alt="Truck / Cavalos Mecânicos" />
                 <h3>Truck / Cavalos Mecânicos</h3>
                 <p>4×2 / 6×2 / 6×4 – Versatilidade para diferentes demandas de transporte.</p>
             </div>
             <div class="fleet-item">
-                <img src="/images/truck-2.jpg" alt="Carreta Convencional e Prancha" />
+                <img src="https://www.briquerural.com.br/fotos/anuncio9129-d466a0ec1563ef2f9cc415261c9207ba.jpg" />
                 <h3>Carreta Convencional e Prancha</h3>
                 <p>Prancha 3, 4 eixos, Super Rebaixada, Extensiva e Pescoço Removível. Equipamentos com porta container 20 e 40 pés.</p>
             </div>
             <div class="fleet-item">
-                <img src="/images/truck-3.jpg" alt="Semi Reboque / Equipamentos" />
+                <img src="https://pastre.com.br/wp-content/uploads/2024/02/Semirreboque_Basculante_Rebaixado_3-scaled.jpg" />
                 <h3>Semi Reboque / Equipamentos</h3>
                 <p>Estrutura adequada para cargas excedentes e especiais, com máxima segurança e eficiência.</p>
             </div>
