Remove unnecessary props from Layout components in multiple pages

--- a/src/pages/servicos.astro
+++ b/src/pages/servicos.astro
@@ -2,11 +2,10 @@
 import Layout from '../layouts/BlogPost.astro';
 ---
 
+// Remova as props heroImage e pubDate do Layout
 <Layout
     title="Serviços - AAS Transportes"
     description="Conheça os serviços de transporte e logística oferecidos pela AAS Transportes"
-    pubDate={new Date()}
-    heroImage="/images/servicos-hero.jpg"
 >
     <h2>Nossos Serviços</h2>
     
