Update footer and header links; modify contact page for WhatsApp support and remove fleet stats

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -34,6 +34,7 @@ import { SITE_TITLE } from '../consts';
                 <HeaderLink href="/">Início</HeaderLink>
                 <HeaderLink href="/solucoes">Soluções</HeaderLink>
                 <HeaderLink href="/frota">Nossa Frota</HeaderLink>
+                <HeaderLink href="/roteiros">Roteiros</HeaderLink>
                 <HeaderLink href="/servicos">Serviços</HeaderLink>
                 <HeaderLink href="/motoristas">Motoristas</HeaderLink>
                 <HeaderLink href="/sobre">Sobre Nós</HeaderLink>
