--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -22,13 +22,15 @@ const yearsInBusiness = today.getFullYear() - 2010;
 				<div class="footer-column">
 					<h4>Links Rápidos</h4>
 					<ul class="footer-links">
-						<li><a href="/">Início</a></li>
-						<li><a href="/solucoes">Soluções</a></li>
-						<li><a href="/frota">Nossa Frota</a></li>
-						<li><a href="/servicos">Serviços</a></li>
-						<li><a href="/sobre">Sobre Nós</a></li>
-						<li><a href="/contato">Contato</a></li>
-					</ul>
+                        <li><a href="/">Início</a></li>
+                        <li><a href="/solucoes">Soluções</a></li>
+                        <li><a href="/frota">Nossa Frota</a></li>
+                        <li><a href="/roteiros">Roteiros</a></li>
+                        <li><a href="/servicos">Serviços</a></li>
+                        <li><a href="/motoristas">Motoristas</a></li>
+                        <li><a href="/sobre">Sobre Nós</a></li>
+                        <li><a href="/contato">Contato</a></li>
+                    </ul>
 				</div>
 				
 				<div class="footer-column">
